/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package org.loopring.lightcone.data;

option java_multiple_files = true;

message JsonRPCRequest {
    string id = 1;
    string json = 2;
}

message JsonRPCResponse {
    string id = 1;
    string json = 2;
}

message JsonRPCRequestSeq {
    repeated JsonRPCRequest req = 1;
}

///////////////////////////////////////////
//
// ethereum json rpc params
//
///////////////////////////////////////////

enum Tag {
    Latest = 0;
    Pending = 1;
    Earliest = 2;
    Hex = 3;
}

message EthGetBalance {
    string address = 1;
    Tag tag = 2;
}
